@@ -10,6 +10,30 @@ import java.util.List;
 
 @Component
 public class DockerCommandFactory {
+    private static final List<String> SPARK_JAVA_OPTIONS = List.of(
+            "-XX:+IgnoreUnrecognizedVMOptions",
+            "--add-modules=jdk.incubator.vector",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.net=ALL-UNNAMED",
+            "--add-opens=java.base/java.nio=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+            "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+            "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+            "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+            "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+            "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED",
+            "-Djdk.reflect.useDirectMethodHandle=false",
+            "-Dio.netty.tryReflectionSetAccessible=true",
+            "-Dio.netty.allocator.type=pooled",
+            "-Dio.netty.handler.ssl.defaultEndpointVerificationAlgorithm=NONE",
+            "--enable-native-access=ALL-UNNAMED"
+    );
     static final String MANAGED_LABEL = "cn.superhuang.datascalpel.managed";
     static final String ENGINE_ID_LABEL = "cn.superhuang.datascalpel.engine-id";
     static final String EXECUTION_ID_LABEL = "cn.superhuang.datascalpel.execution-id";
@@ -71,8 +95,10 @@ public class DockerCommandFactory {
                 "--mount", "type=bind,source=" + checkpointDirectory + ",target=/checkpoints",
                 "--env-file", environmentFile.toAbsolutePath().normalize().toString(),
                 properties.image(),
-                "java", "-jar", "/opt/datascalpel/task-runner.jar"
+                "java"
         ));
+        result.addAll(SPARK_JAVA_OPTIONS);
+        result.addAll(List.of("-jar", "/opt/datascalpel/task-runner.jar"));
         return List.copyOf(result);
     }
 
